# SFM

./: .env.example  .gitignore  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: deploy-backend.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: refresh.py
backend/app/core/: config.py  database.py
backend/app/models/: daily_price.py
backend/app/services/: futu_scraper.py  historical.py  indicators.py  quotes.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: CandidatesTable.tsx  MarketBar.tsx  RefreshButton.tsx
frontend/src/lib/: api.ts
frontend/src/types/: dashboard.ts
nginx/: nginx.conf
scripts/: gcp-setup.sh
